--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   },
   "homepage": "https://github.com/kulkarniatharv/TimeDetox#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "concurrently": "^5.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.16",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
